# ProjectSungine

./: .gitignore  README.md
Sungine/Sungine/: CMakeLists.txt  CMakeLists_.txt
Sungine/Sungine/Sungine_ThirdParty/assimp/: CMakeLists.txt
Sungine/Sungine/Sungine_ThirdParty/bullet3/: CMakeLists.txt  LinearMath_Debug.lib
Sungine/Sungine/Sungine_ThirdParty/glew/: CMakeLists.txt
Sungine/Sungine/Sungine_ThirdParty/glfw/: CMakeLists.txt  glfw3.lib
Sungine/Sungine/Sungine_ThirdParty/glm/: CMakeLists.txt
Sungine/Sungine/Sungine_ThirdParty/glm/glm/: CMakeLists.txt
Sungine/Sungine/Sungine_ThirdParty/imgui/: CMakeLists.txt  imgui_impl_glfw_gl3.cpp
Sungine/Sungine/Sungine_ThirdParty/jsoncpp/: CMakeLists.txt
Sungine/Sungine/Sungine_ThirdParty/libhello/: CMakeLists.txt  hello.cpp  hello.h
Sungine/Sungine/Sungine_ThirdParty/stb/: CMakeLists.txt
Sungine/Sungine/Sungine_defaultResources/shaders/add/: add.glProg
Sungine/Sungine/Sungine_defaultResources/shaders/blit/: blit.glProg
Sungine/Sungine/Sungine_defaultResources/shaders/bloom/: bloom.vert
Sungine/Sungine/Sungine_defaultResources/shaders/debugDrawer/: debugDrawer.glProg  debugDrawer.vert
Sungine/Sungine/Sungine_defaultResources/shaders/defaultBillboard/: billboard.frag  billboard.glProg  billboard.vert
Sungine/Sungine/Sungine_defaultResources/shaders/defaultDrawOnTexture/: drawOnTexture.glProg
Sungine/Sungine/Sungine_defaultResources/shaders/defaultGrassField/: grassField.vert
Sungine/Sungine/Sungine_defaultResources/shaders/defaultLit/: aogl.vert  aogl.vert.bM9180  aogl_gPass.frag
Sungine/Sungine/Sungine_defaultResources/shaders/defaultParticleCPU/: particlesCPU.vert
Sungine/Sungine/Sungine_defaultResources/shaders/defaultParticles/: transparent.frag
Sungine/Sungine/Sungine_defaultResources/shaders/defaultTerrain/: terrain.glProg  terrain.vert
Sungine/Sungine/Sungine_defaultResources/shaders/defaultTerrainEdition/: terrainEdition.frag  terrainEdition.glProg
Sungine/Sungine/Sungine_defaultResources/shaders/defaultUnlit/: unlit.glProg  wireframe.frag  wireframe.vert.G15676
Sungine/Sungine/Sungine_defaultResources/shaders/directionalLight/: directionalLight.glProg
Sungine/Sungine/Sungine_defaultResources/shaders/flares/: flares.frag  flares.geom
Sungine/Sungine/Sungine_defaultResources/shaders/internals/: header.vert  reflectivePlane.vert  withoutReflection.vert
Sungine/Sungine/Sungine_defaultResources/shaders/particleSimulation/: particleSimulation.geom  particleSimulation.vert
Sungine/Sungine/Sungine_defaultResources/shaders/pointLight/: lightPass_pointLight.frag
Sungine/Sungine/Sungine_defaultResources/shaders/reflection/: reflection.frag  reflection.vert
Sungine/Sungine/Sungine_defaultResources/shaders/resizedBlit/: resizedBlit.frag.rh9180
Sungine/Sungine/Sungine_defaultResources/shaders/shadowPass/: shadowPass.frag  shadowPass.glProg
Sungine/Sungine/Sungine_defaultResources/shaders/shadowPassOmni/: shadowPassOmni.frag  shadowPassOmni.geom  shadowPassOmni.glProg  shadowPassOmni.vert
Sungine/Sungine/Sungine_defaultResources/shaders/simple3DDraw/: simple3DDraw.vert
Sungine/Sungine/Sungine_defaultResources/shaders/spotLight/: lightPass_spotLight.frag.SA5616
Sungine/Sungine/Sungine_defaultResources/shaders/ssao/: ssao.frag
Sungine/Sungine/Sungine_defaultResources/shaders/transparent/: transparent.frag
Sungine/Sungine/Sungine_defaultResources/shaders/wireframeInstanced/: wireframeInstanced.vert
Sungine/Sungine/Sungine_sources/: Animation.cpp  Animation.h  AnimationStateMachine.cpp  AnimationStateMachine.h  Animator.cpp  Animator.h  Application.cpp  Application.h  Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  AssetPool.h  AssetTree.cpp  AssetTree.h  BSpline.cpp  BSpline.h  BasicColliders.h  BatchableWith.cpp  BatchableWith.h  Behavior.cpp  Behavior.h  BehaviorFactory.cpp  BehaviorFactory.h  BehaviorManager.cpp  BehaviorManager.h  Billboard.cpp  Billboard.h  CSpline.cpp  CSpline.h  Camera.cpp  Camera.h  CharacterController.cpp  CharacterController.h  Collider.cpp  Collider.h  CollisionInfo.h  Component.cpp  Component.h  ComponentFactory.cpp  (+162 more)
Sungine/Sungine_Linker/: CMakeLists.txt
Sungine/Sungine_ProjectBuilder/: CMakeCache.txt  CMakeLists.txt
Sungine/Sungine_ProjectBuilder/src/: main.cpp
Sungine_Games/Example/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MyProject.sln  MyProject.vcxproj  MyProject.vcxproj.filters  cmake_install.cmake  imgui.ini
Sungine_Games/Example/engineResources/shaders/add/: add.frag  add.vert
Sungine_Games/Example/engineResources/shaders/blit/: blit.vert
Sungine_Games/Example/engineResources/shaders/bloom/: bloom.frag  bloom.glProg
Sungine_Games/Example/engineResources/shaders/blur/: blur.frag  blur.glProg
Sungine_Games/Example/engineResources/shaders/debugDrawer/: debugDrawer.frag
Sungine_Games/Example/engineResources/shaders/defaultBillboard/: billboard.frag.CZ4528  transparent.vert
Sungine_Games/Example/engineResources/shaders/defaultDrawOnTexture/: drawOnTexture.frag  drawOnTexture.vert
Sungine_Games/Example/engineResources/shaders/defaultGrassField/: grassField.frag  grassField.glProg
Sungine_Games/Example/engineResources/shaders/defaultLit/: lit.glProg
Sungine_Games/Example/engineResources/shaders/defaultParticleCPU/: particlesCPU.frag  particlesCPU.glProg
Sungine_Games/Example/engineResources/shaders/defaultParticles/: particle.frag  particle.geom  particle.vert  particles.glProg
Sungine_Games/Example/engineResources/shaders/defaultSkybox/: skybox.frag  skybox.glProg  skybox.vert
Sungine_Games/Example/engineResources/shaders/defaultTerrain/: terrain.frag
Sungine_Games/Example/engineResources/shaders/defaultTerrainEdition/: terrainEdition.vert
Sungine_Games/Example/engineResources/shaders/defaultUnlit/: wireframe.vert
Sungine_Games/Example/engineResources/shaders/directionalLight/: lightPass_directionalLight.frag
Sungine_Games/Example/engineResources/shaders/flares/: flares.glProg  flares.vert
Sungine_Games/Example/engineResources/shaders/internals/: billboard.vert  (+11 more)
(+15 files in other folders)
